--- a/infra/infra/DO/requirements.txt
+++ b/infra/infra/DO/requirements.txt
@@ -1,19 +1,41 @@
-asn1crypto==0.24.0
-bcrypt==3.1.4
-certifi==2018.10.15
-cffi==1.11.5
+aiohttp==3.5.4
+asn1crypto==1.3.0
+astroid==2.3.3
+async-timeout==3.0.1
+attrs==19.3.0
+bcrypt==3.1.7
+certifi==2019.11.28
+cffi==1.14.0
 chardet==3.0.4
-cryptography==2.3.1
-idna==2.7
-jsonpickle==1.0
-paramiko==2.4.2
+cryptography==2.8
+discord==1.0.1
+discord.py==1.2.5
+docopt==0.6.2
+idna==2.9
+idna-ssl==1.1.0
+isort==4.3.21
+jsonpickle==1.3
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+monotonic==1.5
+multidict==4.7.4
+paramiko==2.7.1
 pkg-resources==0.0.0
-pyaml==17.12.1
-pyasn1==0.4.4
+pyaml==19.12.0
+pyasn1==0.4.8
 pycparser==2.19
+pylint==2.4.4
 PyNaCl==1.3.0
-python-digitalocean==1.13.2
-PyYAML==3.13
-requests==2.19.1
-six==1.11.0
-urllib3==1.23
+python-digitalocean==1.15.0
+python-valve==0.2.1
+PyYAML==5.3
+requests==2.23.0
+responses==0.10.9
+six==1.14.0
+typed-ast==1.4.0
+typing-extensions==3.7.4.1
+uptime==3.0.1
+urllib3==1.25.8
+websockets==6.0
+wrapt==1.11.2
+yarl==1.4.2
