--- a/db/requirements.txt
+++ b/db/requirements.txt
@@ -1,23 +1,57 @@
-cassandra-driver==3.14.0
-certifi==2018.4.16
+aiohttp==3.5.4
+asn1crypto==1.3.0
+astroid==2.3.3
+async-timeout==3.0.1
+attrs==19.3.0
+bcrypt==3.1.7
+cassandra-driver==3.21.0
+certifi==2019.11.28
+cffi==1.14.0
 chardet==3.0.4
-click==6.7
+Click==7.0
+cryptography==2.8
 cycler==0.10.0
-Flask==1.0.2
-gunicorn==19.9.0
-idna==2.7
-itsdangerous==0.24
-Jinja2==2.10
-kiwisolver==1.0.1
-MarkupSafe==1.0
-matplotlib==2.2.3
-numpy==1.15.0
+discord==1.0.1
+discord.py==1.2.5
+docopt==0.6.2
+Flask==1.1.1
+geomet==0.1.2
+gunicorn==20.0.4
+idna==2.9
+idna-ssl==1.1.0
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.11.1
+jsonpickle==1.3
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+matplotlib==3.1.3
+mccabe==0.6.1
+monotonic==1.5
+multidict==4.7.4
+numpy==1.18.1
+paramiko==2.7.1
 pkg-resources==0.0.0
-pyparsing==2.2.0
-python-dateutil==2.7.3
-pytz==2018.5
-PyYAML==3.13
-requests==2.19.1
-six==1.11.0
-urllib3==1.23
-Werkzeug==0.14.1
+pyaml==19.12.0
+pyasn1==0.4.8
+pycparser==2.19
+pylint==2.4.4
+PyNaCl==1.3.0
+pyparsing==2.4.6
+python-dateutil==2.8.1
+python-digitalocean==1.15.0
+python-valve==0.2.1
+pytz==2019.3
+PyYAML==5.3
+requests==2.23.0
+responses==0.10.9
+six==1.14.0
+typed-ast==1.4.0
+typing-extensions==3.7.4.1
+uptime==3.0.1
+urllib3==1.25.8
+websockets==6.0
+Werkzeug==1.0.0
+wrapt==1.11.2
+yarl==1.4.2
